--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,9 +1,10 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 
-RewriteRule test test.html [L]
-
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
 </IfModule>
+
+# Enable this if your host supports it
+# php_flag magic_quotes_gpc Off
